excute code and create embedding model

--- a/BYO-search-engine/notebook.ipynb
+++ b/BYO-search-engine/notebook.ipynb
@@ -2956,7 +2956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "id": "20357dc1-3fd1-4b0e-a476-88ce433e347a",
    "metadata": {},
    "outputs": [
@@ -2999,7 +2999,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 14%|█▍        | 17/119 [01:29<08:01,  4.72s/it]"
+      "100%|██████████| 119/119 [06:16<00:00,  3.16s/it]\n"
      ]
     }
    ],
@@ -3013,7 +3013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "id": "e30cf0c0-0522-411c-8e6f-3368aafd84e5",
    "metadata": {},
    "outputs": [],
@@ -3023,13 +3023,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "id": "eb3fbe18-b993-4d03-890f-0a9f37ad11d6",
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('embeddings.bin', 'wb') as f_out:\n",
-    "    pickle.dump(embeddings)"
+    "    pickle.dump(embeddings,f_out)"
    ]
   },
   {
